# pytest_example

./: .gitignore  CHANGELOG.rst  README.md  setup.cfg  setup.py
.github/workflows/: lint.yaml  test_package.yaml
docs/: api.rst  conf.py  index.rst  pybss.algorithm.rst  pybss.bss.fdica.rst  pybss.bss.iva.rst  pybss.bss.rst  tutorial.rst
pybss/: __init__.py
pybss/algorithm/: projection_back.py
pybss/bss/: __init__.py  _flooring.py  fdica.py  iva.py
pybss/transforms/: pca.py
requirements/: dev.txt  docs.txt
tests/.data/: download_mird.py  download_mird.sh
tests/algorithm/: test_projection_back.py
tests/bss/: create_dataset.py  test_fdica.py  test_iva.py
tests/scripts/: download_sisec2011.bat  download_sisec2011.sh
