[metadata]
name = "pybss"
version = "0.0.0+feature/setup"
description = "An example of GitHub Actions & pytest"
long_description = file: README.md
license = "MIT License"
url = "https://github.com/tky823/pytest_example"
python_requires = ">=3.7, <4"

[options]
packages = find:
install_requires = "numpy"

[options.packages.find]
exclude = "tests"